server/iptables/ip6tables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:LIBVIRT_FWI - [0:0]
:LIBVIRT_FWO - [0:0]
:LIBVIRT_FWX - [0:0]
:LIBVIRT_INP - [0:0]
:LIBVIRT_OUT - [0:0]
:lk_check - [0:0]
:lk_check_local - [0:0]
:lk_forward - [0:0]
:lk_input - [0:0]
:lk_output - [0:0]
:lk_reject - [0:0]
:lk_related - [0:0]
:lk_trusted - [0:0]
:z_any_to_cpanel - [0:0]
:z_lan_to_lan - [0:0]
:z_lan_to_node - [0:0]
:z_lan_to_wan - [0:0]
:z_wan_to_lan - [0:0]
:z_wan_to_node - [0:0]
-A INPUT -j LIBVIRT_INP
-A INPUT -d 2406:3400:217:e030::1/128 -i br0 -p tcp -m tcp --dport 3127 -j ACCEPT
-A INPUT -d 2406:3400:217:e030::1/128 -i en0 -p tcp -m tcp --dport 3127 -j ACCEPT
-A INPUT -d 2406:3400:217:e030::1/128 -i br0 -p tcp -m tcp --dport 3128 -j ACCEPT
-A INPUT -d 2406:3400:217:e030::1/128 -i en0 -p tcp -m tcp --dport 3128 -j ACCEPT
-A INPUT -j lk_check
-A INPUT -j lk_check_local
-A INPUT -m conntrack --ctstate NEW -j lk_input
-A INPUT -i lo -j ACCEPT
-A INPUT -j lk_reject
-A FORWARD -j LIBVIRT_FWX
-A FORWARD -j LIBVIRT_FWI
-A FORWARD -j LIBVIRT_FWO
-A FORWARD -j lk_check
-A FORWARD -m conntrack --ctstate NEW -j lk_forward
-A FORWARD -j lk_reject
-A OUTPUT -j LIBVIRT_OUT
-A OUTPUT -j lk_check
-A OUTPUT -j lk_check_local
-A OUTPUT -m conntrack --ctstate NEW -j lk_output
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -j lk_reject
-A lk_check -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A lk_check -m mark --mark 0x2/0x2 -j ACCEPT
-A lk_check -m conntrack --ctstate RELATED -j lk_related
-A lk_check -m conntrack --ctstate INVALID -j DROP
-A lk_check -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j REJECT --reject-with tcp-reset
-A lk_check -p ipv6-icmp -m icmp6 --icmpv6-type 1 -j ACCEPT
-A lk_check -p ipv6-icmp -m icmp6 --icmpv6-type 2 -j ACCEPT
-A lk_check -p ipv6-icmp -m icmp6 --icmpv6-type 3 -j ACCEPT
-A lk_check -p ipv6-icmp -m icmp6 --icmpv6-type 4 -j ACCEPT
-A lk_check -p ipv6-icmp -m icmp6 --icmpv6-type 128 -j ACCEPT
-A lk_check -p ipv6-icmp -m icmp6 --icmpv6-type 129 -j ACCEPT
-A lk_check_local -p ipv6-icmp -m hl --hl-eq 255 -m icmp6 --icmpv6-type 133 -j ACCEPT
-A lk_check_local -p ipv6-icmp -m hl --hl-eq 255 -m icmp6 --icmpv6-type 134 -j ACCEPT
-A lk_check_local -p ipv6-icmp -m hl --hl-eq 255 -m icmp6 --icmpv6-type 135 -j ACCEPT
-A lk_check_local -p ipv6-icmp -m hl --hl-eq 255 -m icmp6 --icmpv6-type 136 -j ACCEPT
-A lk_check_local -p ipv6-icmp -m hl --hl-eq 255 -m icmp6 --icmpv6-type 141 -j ACCEPT
-A lk_check_local -p ipv6-icmp -m hl --hl-eq 255 -m icmp6 --icmpv6-type 142 -j ACCEPT
-A lk_check_local -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 130 -j ACCEPT
-A lk_check_local -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 131 -j ACCEPT
-A lk_check_local -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 132 -j ACCEPT
-A lk_check_local -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 143 -j ACCEPT
-A lk_check_local -p ipv6-icmp -m hl --hl-eq 255 -m icmp6 --icmpv6-type 148 -j ACCEPT
-A lk_check_local -p ipv6-icmp -m hl --hl-eq 255 -m icmp6 --icmpv6-type 149 -j ACCEPT
-A lk_check_local -s fe80::/10 -p ipv6-icmp -m hl --hl-eq 1 -m icmp6 --icmpv6-type 151 -j ACCEPT
-A lk_check_local -s fe80::/10 -p ipv6-icmp -m hl --hl-eq 1 -m icmp6 --icmpv6-type 152 -j ACCEPT
-A lk_check_local -s fe80::/10 -p ipv6-icmp -m hl --hl-eq 1 -m icmp6 --icmpv6-type 153 -j ACCEPT
-A lk_forward -j lk_check_local
-A lk_forward -i br0 -o ppp0 -j z_lan_to_wan
-A lk_forward -i br0 -o en1 -j z_lan_to_wan
-A lk_forward -i en0 -o ppp0 -j z_lan_to_wan
-A lk_forward -i en0 -o en1 -j z_lan_to_wan
-A lk_forward -i br0 -o br0 -j z_lan_to_lan
-A lk_forward -i br0 -o en0 -j z_lan_to_lan
-A lk_forward -i en0 -o br0 -j z_lan_to_lan
-A lk_forward -i en0 -o en0 -j z_lan_to_lan
-A lk_forward -i ppp0 -o br0 -j z_wan_to_lan
-A lk_forward -i ppp0 -o en0 -j z_wan_to_lan
-A lk_forward -i en1 -o br0 -j z_wan_to_lan
-A lk_forward -i en1 -o en0 -j z_wan_to_lan
-A lk_input -p tcp -m tcp --dport 22 -j lk_trusted
-A lk_input -i br0 -j z_lan_to_node
-A lk_input -i en0 -j z_lan_to_node
-A lk_input -i ppp0 -j z_wan_to_node
-A lk_input -i en1 -j z_wan_to_node
-A lk_input -d ::1/128 -p tcp -m tcp --dport 80 -j lk_reject
-A lk_input -d ::1/128 -p tcp -m tcp --dport 443 -j lk_reject
-A lk_output -p udp -m udp --dport 547 -j ACCEPT
-A lk_output -p udp -m udp --dport 53 -j ACCEPT
-A lk_output -p udp -m udp --dport 123 -j ACCEPT
-A lk_output -o ppp0 -m mark --mark 0x4/0x4 -j DROP
-A lk_output -o en1 -m mark --mark 0x4/0x4 -j DROP
-A lk_output -j ACCEPT
-A lk_reject -p udp -m udp -j REJECT --reject-with icmp6-port-unreachable
-A lk_reject -p tcp -m tcp -j REJECT --reject-with tcp-reset
-A lk_reject -j REJECT --reject-with icmp6-adm-prohibited
-A lk_related -p ipv6-icmp -j ACCEPT
-A lk_related -p tcp -m tcp --tcp-flags RST RST -j ACCEPT
-A lk_related -p tcp -m helper --helper ftp -m tcp --dport 1024:65535 -j ACCEPT
-A lk_related -m limit --limit 12/min -j LOG --log-prefix "RELATED not expected: "
-A lk_related -j ACCEPT
-A lk_trusted -j ACCEPT
-A z_any_to_cpanel -p tcp -m tcp --dport 443 -j ACCEPT
-A z_any_to_cpanel -p tcp -m tcp --dport 80 -j ACCEPT
-A z_any_to_cpanel -p udp -m udp --dport 53 -j ACCEPT
-A z_any_to_cpanel -p tcp -m tcp -m multiport --dports 2082,2083,2086,2087,2096 -j ACCEPT
-A z_any_to_cpanel -p tcp -m tcp --dport 53 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 25 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 53 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 80 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 139 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 445 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 873 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 3127 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 3128 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 3129 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 5201 -j ACCEPT
-A z_lan_to_node -p udp -m udp --dport 53 -j ACCEPT
-A z_lan_to_node -p udp -m udp --dport 123 -j ACCEPT
-A z_lan_to_node -p udp -m udp --dport 137 -j ACCEPT
-A z_lan_to_node -p udp -m udp --dport 138 -j ACCEPT
-A z_lan_to_node -p udp -m udp --sport 546 --dport 547 -j ACCEPT
-A z_lan_to_node -p udp -m udp --dport 5201 -j ACCEPT
-A z_lan_to_wan -m mark --mark 0x4/0x4 -j DROP
-A z_lan_to_wan -j ACCEPT
-A z_wan_to_lan -d 2406:3400:217:e030:5054:ff:fef2:c063/128 -j z_any_to_cpanel
-A z_wan_to_node -p tcp -m tcp --dport 25 -j ACCEPT
-A z_wan_to_node -p tcp -m tcp --dport 80 -j ACCEPT
-A z_wan_to_node -p udp -m udp --dport 123 -j ACCEPT
-A z_wan_to_node -p udp -m udp --sport 547 --dport 546 -j ACCEPT
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:LIBVIRT_PRT - [0:0]
:transparent_proxy - [0:0]
:z_from_lan - [0:0]
:z_from_wan - [0:0]
:z_to_lan - [0:0]
:z_to_wan - [0:0]
-A PREROUTING -i br0 -j z_from_lan
-A PREROUTING -i en0 -j z_from_lan
-A PREROUTING -i ppp0 -j z_from_wan
-A PREROUTING -i en1 -j z_from_wan
-A POSTROUTING -j LIBVIRT_PRT
-A POSTROUTING -o br0 -j z_to_lan
-A POSTROUTING -o en0 -j z_to_lan
-A POSTROUTING -o ppp0 -j z_to_wan
-A POSTROUTING -o en1 -j z_to_wan
-A transparent_proxy -d 2406:3400:217:e030::/60 -j RETURN
-A transparent_proxy -d fe80::/10 -j RETURN
-A transparent_proxy -m mark --mark 0x2/0x2 -j RETURN
-A transparent_proxy -m mark --mark 0x4/0x4 -j RETURN
-A transparent_proxy -d 2403:300:a08:f000::7/128 -m comment --comment "safebrowsing-proxy.g.aaplimg.com" -j RETURN
-A transparent_proxy -d 2403:300:a08:f100::8/128 -m comment --comment "safebrowsing-proxy.g.aaplimg.com" -j RETURN
-A transparent_proxy -p tcp -j REDIRECT --to-ports 3129
-A z_from_lan -p tcp -m tcp --dport 80 -j transparent_proxy
-A z_from_lan -p udp -m udp --dport 123 -j REDIRECT
COMMIT
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:LIBVIRT_PRT - [0:0]
-A PREROUTING -m mac --mac-source 08:00:27:2e:33:62 -m comment --comment gazoo -j MARK --set-xmark 0x4/0x4
-A PREROUTING -i br0 -m mac --mac-source 34:7e:5c:90:d0:23 -m comment --comment sonos-beam -j MARK --set-xmark 0x2/0x2
-A PREROUTING -i br0 -m mac --mac-source 78:28:ca:33:ee:32 -m comment --comment sonos-play1-1 -j MARK --set-xmark 0x2/0x2
-A PREROUTING -i br0 -m mac --mac-source 78:28:ca:2a:04:e4 -m comment --comment sonos-play1-2 -j MARK --set-xmark 0x2/0x2
-A PREROUTING -i br0 -m mac --mac-source 78:28:ca:33:ec:84 -m comment --comment sonos-play1-3 -j MARK --set-xmark 0x2/0x2
-A PREROUTING -i br0 -m mac --mac-source 34:7e:5c:44:cd:56 -m comment --comment sonos-play1-4 -j MARK --set-xmark 0x2/0x2
-A PREROUTING -i br0 -m mac --mac-source 48:a6:b8:16:2e:20 -m comment --comment sonos-onesl-1 -j MARK --set-xmark 0x2/0x2
-A PREROUTING -i br0 -m mac --mac-source 28:80:88:f6:ad:62 -m comment --comment orbi-router -j MARK --set-xmark 0x4/0x4
-A PREROUTING -i br0 -m mac --mac-source 28:80:88:f2:e1:74 -m comment --comment orbi-satellite1 -j MARK --set-xmark 0x4/0x4
-A PREROUTING -i br0 -m mac --mac-source 28:80:88:f2:f1:73 -m comment --comment orbi-satellite2 -j MARK --set-xmark 0x4/0x4
-A PREROUTING -i br0 -m mac --mac-source bc:3b:ad:24:7d:81 -m comment --comment prosafe-switch1 -j MARK --set-xmark 0x4/0x4
-A FORWARD -o ppp0 -p tcp -m tcp --tcp-flags SYN,RST SYN -m tcpmss --mss 1433:65475 -j TCPMSS --set-mss 1432
-A POSTROUTING -j LIBVIRT_PRT
COMMIT
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -p tcp -m tcp --dport 21 -j CT --helper ftp
COMMIT
*security
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
