server/iptables/iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:LIBVIRT_FWI - [0:0]
:LIBVIRT_FWO - [0:0]
:LIBVIRT_FWX - [0:0]
:LIBVIRT_INP - [0:0]
:LIBVIRT_OUT - [0:0]
:lk_check - [0:0]
:lk_forward - [0:0]
:lk_input - [0:0]
:lk_output - [0:0]
:lk_reject - [0:0]
:lk_reject_quiet - [0:0]
:lk_related - [0:0]
:lk_trusted - [0:0]
:r_invalid - [0:0]
:r_new_not_syn - [0:0]
:z_lan_to_node - [0:0]
:z_lan_to_wan - [0:0]
:z_wan_to_lan - [0:0]
:z_wan_to_node - [0:0]
-A INPUT -j LIBVIRT_INP
-A INPUT -d 10.10.0.1/32 -i br0 -p tcp -m tcp --dport 3127 -j ACCEPT
-A INPUT -d 10.10.0.1/32 -i en0 -p tcp -m tcp --dport 3127 -j ACCEPT
-A INPUT -d 10.10.0.1/32 -i br0 -p tcp -m tcp --dport 3128 -j ACCEPT
-A INPUT -d 10.10.0.1/32 -i en0 -p tcp -m tcp --dport 3128 -j ACCEPT
-A INPUT -j lk_check
-A INPUT -m conntrack --ctstate NEW -j lk_input
-A INPUT -i lo -j ACCEPT
-A INPUT -j lk_reject
-A FORWARD -j LIBVIRT_FWX
-A FORWARD -j LIBVIRT_FWI
-A FORWARD -j LIBVIRT_FWO
-A FORWARD -j lk_check
-A FORWARD -m conntrack --ctstate NEW -j lk_forward
-A FORWARD -j lk_reject
-A OUTPUT -j LIBVIRT_OUT
-A OUTPUT -j lk_check
-A OUTPUT -m conntrack --ctstate NEW -j lk_output
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -j lk_reject
-A lk_check -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A lk_check -m mark --mark 0x2/0x2 -j ACCEPT
-A lk_check -m conntrack --ctstate RELATED -j lk_related
-A lk_check -m conntrack --ctstate INVALID -j r_invalid
-A lk_check -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j r_new_not_syn
-A lk_check -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A lk_forward -i br0 -o ppp0 -j z_lan_to_wan
-A lk_forward -i br0 -o en1 -j z_lan_to_wan
-A lk_forward -i en0 -o ppp0 -j z_lan_to_wan
-A lk_forward -i en0 -o en1 -j z_lan_to_wan
-A lk_forward -i ppp0 -o br0 -j z_wan_to_lan
-A lk_forward -i ppp0 -o en0 -j z_wan_to_lan
-A lk_forward -i en1 -o br0 -j z_wan_to_lan
-A lk_forward -i en1 -o en0 -j z_wan_to_lan
-A lk_input -p tcp -m tcp --dport 22 -j lk_trusted
-A lk_input -i br0 -j z_lan_to_node
-A lk_input -i en0 -j z_lan_to_node
-A lk_input -i ppp0 -j z_wan_to_node
-A lk_input -i en1 -j z_wan_to_node
-A lk_input -d 127.0.0.1/32 -p tcp -m tcp --dport 80 -j lk_reject_quiet
-A lk_input -d 127.0.0.1/32 -p tcp -m tcp --dport 443 -j lk_reject_quiet
-A lk_output -p udp -m udp --dport 67 -j ACCEPT
-A lk_output -p udp -m udp --dport 53 -j ACCEPT
-A lk_output -p udp -m udp --dport 123 -j ACCEPT
-A lk_output -j ACCEPT
-A lk_reject -m mark ! --mark 0x1/0x1 -m limit --limit 12/min -j LOG --log-prefix "rejected: "
-A lk_reject -j lk_reject_quiet
-A lk_reject_quiet -p udp -m udp -j REJECT --reject-with icmp-port-unreachable
-A lk_reject_quiet -p tcp -m tcp -j REJECT --reject-with tcp-reset
-A lk_reject_quiet -j REJECT --reject-with icmp-proto-unreachable
-A lk_related -p icmp -j ACCEPT
-A lk_related -p tcp -m tcp --tcp-flags RST RST -j ACCEPT
-A lk_related -p tcp -m helper --helper ftp -m tcp --dport 1024:65535 -j ACCEPT
-A lk_related -m limit --limit 12/min -j LOG --log-prefix "RELATED not expected: "
-A lk_related -j ACCEPT
-A lk_trusted -j ACCEPT
-A r_invalid -p tcp -m tcp --tcp-flags RST RST -j DROP
-A r_invalid -m mark ! --mark 0x1/0x1 -m limit --limit 12/min -j LOG --log-prefix "dropped (INVALID): "
-A r_invalid -j DROP
-A r_new_not_syn -m mark ! --mark 0x1/0x1 -m limit --limit 12/min -j LOG --log-prefix "rejected (NEW not SYN): "
-A r_new_not_syn -p tcp -j REJECT --reject-with tcp-reset
-A z_lan_to_node -p tcp -m tcp --dport 25 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 53 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 80 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 139 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 445 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 873 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 3127 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 3128 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 3129 -j ACCEPT
-A z_lan_to_node -p tcp -m tcp --dport 5201 -j ACCEPT
-A z_lan_to_node -p udp -m udp --dport 53 -j ACCEPT
-A z_lan_to_node -p udp -m udp --dport 123 -j ACCEPT
-A z_lan_to_node -p udp -m udp --dport 137 -j ACCEPT
-A z_lan_to_node -p udp -m udp --dport 138 -j ACCEPT
-A z_lan_to_node -p udp -m udp --sport 68 --dport 67 -j ACCEPT
-A z_lan_to_node -p udp -m udp --dport 5201 -j ACCEPT
-A z_lan_to_wan -j ACCEPT
-A z_wan_to_node -p tcp -m tcp --dport 25 -j ACCEPT
-A z_wan_to_node -p tcp -m tcp --dport 80 -j ACCEPT
-A z_wan_to_node -p udp -m udp --dport 123 -j ACCEPT
-A z_wan_to_node -p udp -m udp --sport 67 --dport 68 -j ACCEPT
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:LIBVIRT_PRT - [0:0]
:transparent_proxy - [0:0]
:z_from_lan - [0:0]
:z_from_wan - [0:0]
:z_to_lan - [0:0]
:z_to_wan - [0:0]
-A PREROUTING -i br0 -j z_from_lan
-A PREROUTING -i en0 -j z_from_lan
-A PREROUTING -i ppp0 -j z_from_wan
-A PREROUTING -i en1 -j z_from_wan
-A POSTROUTING -j LIBVIRT_PRT
-A POSTROUTING -o br0 -j z_to_lan
-A POSTROUTING -o en0 -j z_to_lan
-A POSTROUTING -o ppp0 -j z_to_wan
-A POSTROUTING -o ppp0 -j SNAT --to-source 220.233.122.8
-A POSTROUTING -o en1 -j z_to_wan
-A POSTROUTING -o en1 -j SNAT --to-source 192.168.20.2
-A transparent_proxy -d 10.10.0.0/16 -j RETURN
-A transparent_proxy -d 192.168.0.0/16 -j RETURN
-A transparent_proxy -p tcp -m mark ! --mark 0x2/0x2 -j REDIRECT --to-ports 3129
-A z_from_lan -p tcp -m tcp --dport 80 -j transparent_proxy
-A z_from_lan -p udp -m udp --dport 123 -j REDIRECT
COMMIT
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:LIBVIRT_PRT - [0:0]
-A PREROUTING -i ppp0 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -p udp -m udp --dport 1900 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -p udp -m udp --sport 54915 --dport 54915 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -p udp -m udp --sport 57621 --dport 57621 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -i br0 -m mac --mac-source 1c:98:c1:5c:39:ba -m comment --comment playstation4 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -i br0 -m mac --mac-source 34:7e:5c:90:d0:23 -m comment --comment sonos-beam -j MARK --set-xmark 0x2/0xffffffff
-A PREROUTING -i br0 -m mac --mac-source 78:28:ca:33:ee:32 -m comment --comment sonos-play1-1 -j MARK --set-xmark 0x2/0xffffffff
-A PREROUTING -i br0 -m mac --mac-source 78:28:ca:2a:04:e4 -m comment --comment sonos-play1-2 -j MARK --set-xmark 0x2/0xffffffff
-A PREROUTING -i br0 -m mac --mac-source 78:28:ca:33:ec:84 -m comment --comment sonos-play1-3 -j MARK --set-xmark 0x2/0xffffffff
-A PREROUTING -i br0 -m mac --mac-source 34:7e:5c:44:cd:56 -m comment --comment sonos-play1-4 -j MARK --set-xmark 0x2/0xffffffff
-A PREROUTING -i br0 -m mac --mac-source 48:a6:b8:16:2e:20 -m comment --comment sonos-onesl-1 -j MARK --set-xmark 0x2/0xffffffff
-A FORWARD -o ppp0 -p tcp -m tcp --tcp-flags SYN,RST SYN -m tcpmss --mss 1453:65495 -j TCPMSS --set-mss 1452
-A POSTROUTING -j LIBVIRT_PRT
COMMIT
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -p tcp -m tcp --dport 21 -j CT --helper ftp
-A PREROUTING -s 10.10.10.12/32 ! -d 10.10.0.0/16 -j DROP
COMMIT
*security
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
